--- a/visualization/package.json
+++ b/visualization/package.json
@@ -7,6 +7,7 @@
     "d3-request": "^1.0.5",
     "deck.gl": "^4.1.0",
     "luma.gl": "^4.0.1",
+    "material-ui": "^0.20.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-map-gl": "^3.0.0"
